--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "json-server": "^1.0.0-beta.3",
+    "redux-mock-store": "^1.5.5",
     "vite": "^6.3.1"
   }
 }
